--- a/src/components1/Action/Action.module.css
+++ b/src/components1/Action/Action.module.css
@@ -1,7 +1,7 @@
 .actionNode {
   border: 2px solid #1455fa;
-  border-radius: 12px;
-
+  border-radius: 8px;
+  max-width: 200px;
 }
 .body {
   display: flex;
@@ -15,55 +15,28 @@
 }
 
 .handle {
-  height:18px;
+  height:15px;
   border-radius: 30px;
   border:2px solid white;
-  width: 18px;
+  width: 15px;
   background-color: #1455fa;
 }
 
-.handleLeft {
-  position: absolute;
-  top: 2%;
-  left: 44%;
-  border-radius: 12px;
-  background-color: #1455fa;
-}
 
-.handleRight {
-  position: absolute;
-  border-radius: 12px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 18px;
-  width: 18px;
-}
-.bottom {
-  position: absolute;
-  top: 98%;
-  left: 44%;
-  border-radius: 12px;
-  background-color: #1455fa;
-}
 
 .true {
   position: absolute;
-  top: 50%;
-  right: 95%;
   border-radius: 24px;
   background-color: #52c41a;
 }
 
 .false {
   position: absolute;
-  top: 50%;
-  left: 95%;
   border-radius: 24px;
   background-color: #ff4d4f;
 }
 
-.true:after {
+/* .true:after {
   content: "";
   display: block;
   height: 12px;
@@ -80,4 +53,44 @@
   background: #fff;
   -webkit-mask: url(../../assets/Close.svg);
   mask: url(../../assets/Close.svg);
+} */
+
+
+.header {
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content:center;
+  padding: 8px;
+  min-height: 30px; */
 }
+.labelContainer {
+  background-color: #1455fa;
+  border-radius: 6px 6px 0 0 ;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: start;
+  color: white;
+  border: 2px solid #1455fa;
+}
+
+.labelContainer h6{
+  padding-top: 5px;
+}
+
+.textupdaternodeaction{
+  margin: 8px;
+}
+
+.textupdaternodeaction>p{
+  padding-left: 5px;
+  padding-top: 5px;
+  color: #070707;
+  font-size: 12px;
+}
+
+.textupdaternodeaction>p>b{
+  color: #1455fa;
+}
+
